# 4th_grade

./: README.md
CalcMath/ddrozdov/: lab1.ipynb  lab2.ipynb
CalcMath/mgoncharov/: Untitled.ipynb
CalcMath/mgoncharov/1/: MNK.py  exp.py
CalcMath/mgoncharov/2/: LU.py  Linear equations solutions.ipynb  Linear_equations_solutions.ipynb
CalcMath/mgoncharov/2/.ipynb_checkpoints/: Linear equations solutions-checkpoint.ipynb
Cisco/ZVasilii/: Discretization_of_analog_signals.ipynb
Cisco/mgoncharov/: 1Lab.ipynb  A.xls  info2.txt
Cisco/mgoncharov/.ipynb_checkpoints/: 1Lab-checkpoint.ipynb
Cisco/mgoncharov/2/.ipynb_checkpoints/: 2-checkpoint.ipynb
Compiler/: CMakeLists.txt  Makefile  README.md  format.rb  generator.cpp  graph.cpp  main.c
Compiler/Language/: INode.hpp  Node.cc  Node.hpp  compiler.y  driver.cc  enums.h  parser.hpp  scanner.l
Compiler/MAG/: CMakeLists.txt  MAG.h  MAG.td  MAGInstrFormats.td  MAGInstrInfo.td  MAGRegisterInfo.td  MAGTargetMachine.cpp
Compiler/MAG/MCTargetDesc/: MAGMCTargetDesc.cpp  MAGMCTargetDesc.h
Compiler/MAG/TargetInfo/: CMakeLists.txt  MAGTargetInfo.cpp
Compiler/link/: common.h  link.h  link.hpp
Compiler/llvm-project/: release.cmake
Compiler/llvm-project/llvm/: CMakeLists.txt
Compiler/llvm-project/llvm/cmake/: config-ix.cmake
Compiler/llvm-project/llvm/include/llvm/TargetParser/: Triple.h
Compiler/math/: inside.c  math.c  math.h  math.ll  math.mcl  math.mcl.ll  my_math.ll  my_math_ext.ll
Compiler/scripts/: format.rb  test.rb
Compiler/tests/: 1.mcl  1.mcl.ll  1.pcl  2.mcl  2.pcl  3.mcl  3.pcl  4.mcl  4.pcl  5.mcl  6.mcl  7.mcl  7.pcl  arr1.mcl  arr1.mcl.ll  arrFib.mcl  fib.mcl  fib.pcl
DigitalSignals/ZVasilii/: Discretization_of_analog_signals.ipynb
DigitalSignals/dmitrryy/: Lab2_task.ipynb  Lab3_task__.ipynb
DigitalSignals/dmitrryy/Lab1/: 1.1.ipynb  1.2.ipynb  2.ipynb  3.ipynb
DigitalSignals/mgoncharov/: main.py
DigitalSignals/mgoncharov/.ipynb_checkpoints/: 1Lab-checkpoint.ipynb
Fiduccia/: .gitignore  Alg.cpp  AlgFinal.cpp  AlgMod.cpp  AlgOrd.cpp  CMakeLists.txt  Dump.out  DumpFinal.out  DumpMod.out  DumpOrd.out  README.md  check.py  include.hpp  includeFinal.hpp  includeMod.hpp  includeOrd.hpp  main.cpp  mainFinal.cpp  mainMod.cpp  mainOrd.cpp  src.cpp
Fiduccia/benchmark/: sat14_6s10.cnf.hgr  sat14_6s11-opt.cnf.hgr  sat14_6s12.cnf.hgr  sat14_6s130-opt.cnf.hgr  sat14_6s131-opt.cnf.hgr  sat14_6s133.cnf.hgr  sat14_6s153.cnf.hgr
Fiduccia/graphics/: GAIN  ITER  TIME
Libs/: MNK.py
Nucleus/: .gitignore  CMakeLists.txt  README.md  readme.md  srs.md  tests.cpp
Nucleus/include/: common.h  errcode.cpp  nucleus.cpp  nucleus.h  nucleus.hpp  nucleusDetail.h  nucleusDetail.hpp  nucleusN.hpp  nucleusNew.hpp
Nucleus/include/unused/: common.h  nucleus.cpp
ParProg/: README.md  a.out  copyin.cpp  different_types.cpp  nested.cpp  sequential.cpp  sum.cpp
ParProg/FFT/: Makefile  fft_openmp  fft_openmp_parallel  fft_openmp_serial  parallel  parallel.cpp  plot.py  serial  serial.cpp
ParProg/Lab/: CMakeLists.txt  Makefile  README.md  helper.h  main.cpp  mp.cpp  mpi.cc
ParProg/Math/: Makefile  README.md  common.hpp  data100.txt  data130.txt  data149.txt  data151.txt  data40.txt  main.cpp  math.cpp  matr.py  plot.py
ParProg/MatrixMultiplication/: CMakeLists.txt  algs.hpp  format.rb  main.cpp  matrix.hpp
ParProg/ReshEr/: main.cpp
Physics/ddrozdov/1.1/DragonZoom/: 5.1.1WithoutCode.html
Physics/ddrozdov/5.1.1/: 5.1.1.html  5.1.1WithoutCode.html
Physics/ddrozdov/5.2.2/: 5.2.2.ipynb
Physics/ddrozdov/5.4.2/: 4.2.XLSX  5.4.2.ipynb
Physics/ddrozdov/5.5.1/: 5.1.XLSX  5.5.1.ipynb
Physics/kivakin/1.1/: main.py
Physics/kivakin/10.1/: main.ipynb
Physics/mgoncharov/: README.md
Physics/mgoncharov/4/ВПВ/: data.ods
Physics/mgoncharov/5/4.2/: 4.2.ipynb  data.xls
Physics/mgoncharov/5/4.2/.ipynb_checkpoints/: 4.2-checkpoint.ipynb
Physics/mgoncharov/5/5.1/: 5.1.ipynb  data.xls
Physics/mgoncharov/5/5.1/.ipynb_checkpoints/: 5.1-checkpoint.ipynb
Physics/mgoncharov/5/Rezonans/: Electronic paramagnetic resonance.ipynb  Example.py  MNK.py  data.ods  data.xls  Электронный парамагнитный резонанс.ipynb
Physics/mgoncharov/5/Rezonans/.ipynb_checkpoints/: Electronic paramagnetic resonance-checkpoint  Electronic paramagnetic resonance-checkpoint.ipynb  Электронный парамагнитный резонанс-checkpoint.ipynb
Physics/mgoncharov/5/SpectrHI/: Developing spectra of hydrogen and iodine.ipynb  Developing_spectra_of_hydrogen_and_iodine.ipynb  MNK.py
Physics/mgoncharov/5/SpectrHI/.ipynb_checkpoints/: Developing spectra of hydrogen and iodine-checkpoint.ipynb
Physics/mgoncharov/5/Фотоэффект/: Untitled 1.odt  data.ods
Physics/ssidelnikov/data/: .~lock.data.ods#  data.ods
Physics/ssidelnikov/tex/: main.tex
PythonLibs/: MNK.py
RT/mgoncharov/77_98/: 77_98.ipynb
RT/mgoncharov/77_98/.ipynb_checkpoints/: 77_98-checkpoint.ipynb
checkers/: Checker.html  Checker.java  Makefile  example.html  example.java
checkers/src/: Button.java  Coord.java  Position.java  Status.java  Way.java
checkers/testServer/: SocketClientExample.java  SocketServerExample.java
labs/1.1/: errors.py  main.py
labs/1.1/DragonZoom/: 1.1.XLSX  5.1.1.html  5.1.1.ipynb
